# toy

./: CMakeLists.txt  CMakeLists.txt~  Cykling_Indeks.h  Cykling_Indeks.h~  box.cpp  box.cpp~  box.h~  def.h  def.h~  heleprs.h  heleprs.h~  helpers.h~  main.cpp  uklad.cpp  uklad.cpp~  uklad.h  uklad.h~
